Add OpenSearch hybrid search endpoint
PR: https://github.com/JonathanGWesterfield/Librarian/pull/62
